RESOLVED FIXED Bug 41695
[DRT] Assertion failed when drag and move a draggable element.
https://bugs.webkit.org/show_bug.cgi?id=41695
Summary [DRT] Assertion failed when drag and move a draggable element.
Hajime Morrita
Reported 2010-07-06 06:37:22 PDT
Created attachment 60627 [details] reproduce. DumprRenderTree gets assertion failure when drag an element with mouseDown() followed by multiple mouseMoveTo() calls. A reproduction is attached. This problem prevents testing Bug 39725.
Attachments
reproduce. (1.48 KB, text/html)
2010-07-06 06:37 PDT, Hajime Morrita
no flags
patch v0 (5.22 KB, patch)
2010-07-06 06:58 PDT, Hajime Morrita
tony: review+
Hajime Morrita
Comment 1 2010-07-06 06:58:54 PDT
Created attachment 60629 [details] patch v0
Hajime Morrita
Comment 2 2010-07-06 07:00:22 PDT
Hi Eric, could you review this? All tests are passed.
Tony Chang
Comment 3 2010-08-03 15:08:34 PDT
Comment on attachment 60629 [details] patch v0 The code looks fine, just some small style nits. > diff --git a/LayoutTests/fast/events/dragging-mouse-moves.html b/LayoutTests/fast/events/dragging-mouse-moves.html > + <style> * { margin: 0px; padding: 0px; } </style> > + <script> > + function log(msg) > + { The code is indented a strange amount here. Maybe line it up with the <script> tag? > + if (window.layoutTestController) { > + layoutTestController.waitUntilDone(); > + layoutTestController.dumpAsText(); > + testDragAndMove(); > + } It would be nice to have a message saying this test requires DRT if !window.layoutTestController. > + eventSender.mouseMoveTo(startX,startY); > + eventSender.mouseDown(); > + // Them drag it. OK not to crash. Grammar nit: "Then drag it." > diff --git a/WebKitTools/ChangeLog b/WebKitTools/ChangeLog > + mouseMoveToX() did call [WebHTMLView mouseDragged] even if dragging started. > + But Cocoa doesn't call mouseDragged() untill dragging is done. Spelling: until > + Other part of DumpRenderTree also assumes Cocoa behaviour and an assertion Spelling/Grammar: behavior (to use the US spelling) > + on UIDelegate failed when mouseDragged() is called dudring dragging. Spelling: during
Hajime Morrita
Comment 4 2010-08-04 05:38:53 PDT
Note You need to log in before you can comment on or make changes to this bug.