2010-08-03  MORITA Hajime  <morrita@google.com>

Reviewed by Tony Chang.

        [DRT] Assertion failed when drag and move a draggable element.
        https://bugs.webkit.org/show_bug.cgi?id=41695

        * fast/events/dragging-mouse-moves-expected.txt: Added.
        * fast/events/dragging-mouse-moves.html: Added.
2010-08-03  MORITA Hajime  <morrita@google.com>

        Reviewed by Tony Chang.

        [DRT] Assertion failed when drag and move a draggable element.
        https://bugs.webkit.org/show_bug.cgi?id=41695

        mouseMoveToX() did call [WebHTMLView mouseDragged] even if dragging started.
        But Cocoa doesn't call mouseDragged() until dragging is done.
        Other part of DumpRenderTree also assumes Cocoa behavior and an assertion
        on UIDelegate failed when mouseDragged() is called during dragging.
        This change eliminated the mouseDragged() call when dragging begins,
        which is implicated by draggingInfo instance.

        * DumpRenderTree/mac/EventSendingController.mm:
        (-[EventSendingController mouseMoveToX:Y:]):

        Test: fast/events/dragging-mouse-moves.html

Canonical link: https://commits.webkit.org/55465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64643 268f45cc-cd09-0410-ab3c-d52691b4dbfc